@@ -73,6 +73,7 @@ version 3.0.0 (??/??/????):
 	General:
 	* Add support for Python3 in build scripts. (Ashish Gupta) (#15624)
 	* Various core components of libpurple are now GObjects.
+	* Ciphers are now built from the libpurple directory.
 	* Added dependency GPlugin, which is now required to build libpurple with
 	  plugins support.
 
